[skip ci] init create vacancies

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -25,3 +25,12 @@
 	position: relative;
 	top: 12px;
 }
+
+.text_explicative {
+	font-size: 1.5em;
+	color: $text-4;
+}
+
+.height_120px {
+	height: 120px !important;
+}
