[#77486942] Modifield path uplods in env production

--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -5,7 +5,7 @@
       <span class="logged-avatar">
         <% if current_user.candidate.try(:image) %>
           <%= link_to show_curriculum_candidate_path do %>
-          <%= image_tag current_user.candidate.image.thumb_min %>
+          <%= image_tag current_user.candidate.avatar %>
           <% end %>
         <% end %>
       </span>
