--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -110,7 +110,7 @@
               </div>
             </div>
 
-            <% if !@job.other_information.empty? %>
+            <% if !@job.other_information.nil? %>
             <div>
               <h3 class="vacancy-caption">Outras Informações</h3>
               <div class="vacancy-text">
