--- a/app/views/layouts/_logged.html.erb
+++ b/app/views/layouts/_logged.html.erb
@@ -18,8 +18,8 @@
         <li><%= link_to "Admin", rails_admin_path, :class => "btn btn-link" %></li>
         <% end %>
         <% if current_user.is_company? %>
-        <li><a class="btn btn-link" href="#">Perfil empresa</a></li>
-        <li><%= link_to "Cadastrar vaga", new_vacancy_path, :class => "btn btn-link"%></li>
+        <li><%= link_to "Perfil empresa", company_path, :class => "btn btn-link"%></li>
+        <li><%= link_to "Vagas", vacancies_path, :class => "btn btn-link"%></li>
         <% else %>
         <li><%= link_to "Currículo", show_curriculum_candidate_path, :class => "btn btn-link" %></li>
         <% end %>
