--- a/app/assets/stylesheets/project/color.css.scss
+++ b/app/assets/stylesheets/project/color.css.scss
@@ -8,6 +8,7 @@ $footer: #31B297;		// verde
 
 $component-1: #FFF;			// branco
 $component-2: #E2E6E7;	// cinza
+$component-3: #31B297;	// verde
 
 $text-1: #ECF0F1;		// cinza claro
 $text-2: #25816D;		// verde escuro
