--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -34,7 +34,7 @@
         <article class="vacancy">
           <div class="vacancy-header margin-bottom">
             <figure class="vacancy-avatar">
-              <%= image_tag @job.company.logo.thumb %>
+              <%= image_tag @job.company.logo_marca %>
             </figure>
             <div class="vacancy-enterprise">
               <h1 class="vacancy-enterprise-title"><%= @job.company.fancy_name %></h1>
