--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,14 @@
 	}
 }
 
+.status_vacancy {
+	color: $btn-8;
+}
+
+#main {
+	min-height: 460px;
+}
+
 .salary_negotiable {
 	position: relative;
 	top: 12px;
@@ -29,8 +37,4 @@
 .text_explicative {
 	font-size: 1.5em;
 	color: $text-4;
-}
-
-.height_120px {
-	// height: 120px !important;
 }
