--- a/app/assets/stylesheets/project/components/vacancies.css.scss
+++ b/app/assets/stylesheets/project/components/vacancies.css.scss
@@ -3,7 +3,7 @@
 */
 
 .vacancies {
-
+	
 }
 
 .vacancies-list {
@@ -44,7 +44,7 @@
 		width: 51px;
 		height: 55px;
 
-		background: image_url('icon-premium.png') no-repeat center;
+		background: url('../img/icon-premium.png') no-repeat center;
 	}
 }
 
@@ -53,7 +53,7 @@
 	font-size: 1.3em;
 	font-weight: 400;
 	text-transform: lowercase;
-
+	
 	margin: 0 0 5px;
 	padding-bottom: 5px;
 
@@ -106,7 +106,7 @@
 	width: 100%;
 	height: 30px;
 	line-height: 30px;
-
+	
 	color: $text-5;
 	font-size: 1.3em;
 	text-align: center;
@@ -123,7 +123,7 @@
 	overflow: hidden;
 
 	margin: 0 0 20px;
-
+	
 	.btn,
 	.vacancies-list {
 		margin: 0 5px 0 0;
