--- a/app/views/candidates/new.html.erb
+++ b/app/views/candidates/new.html.erb
@@ -3,7 +3,7 @@
     <section>
       <div class="page-title-container">
         <h1 class="page-title">
-          <span class="nc-min-icon nc-min-candidate"></span> 
+          <span class="nc-min-icon nc-min-candidate"></span>
           <span>Cadastro do Candidato</span>
         </h1>
       </div>
@@ -24,21 +24,25 @@
         </div>
 
         <div class="margin-bottom">
-          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <div class="form-input form-input-green">
-              <%= f.input :name, required: true, autofocus: true, label: false, :placeholder => "Nome*", :input_html => { :id => "user_name_r" } %>
+              <%= f.label :name, :class => "hidden"%>
+              <%= f.text_field :name, :required => true, autofocus: true, :placeholder => "Nome*", :id => "user_name_r" %>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.input :email, required: true, autofocus: true, label: false, :placeholder => "E-mail*", :input_html => { :id => "user_email_r" } %>
+              <%= f.label :email, :class => "hidden"%>
+              <%= f.text_field :email, required: true, autofocus: true, :placeholder => "E-mail*", :id => "user_email_r" %>
             </div>
 
             <div class="form-input form-input-green">
-               <%= f.input :password, required: true, label: false, :placeholder => "senha*", :input_html => { :id => "user_password_r" }%>
+              <%= f.label :password, :class => "hidden"%>
+              <%= f.password_field :password, required: true, :placeholder => "senha*", :id => "user_password_r" %>
             </div>
 
             <div class="form-input form-input-green">
-              <%= f.input :password_confirmation, required: true, label: false, :placeholder => "Confirmar senha*", :input_html => { :id => "user_password_confirmation_r" } %>
+              <%= f.label :password_confirmation, :class => "hidden"%>
+              <%= f.password_field :password_confirmation, required: true, :placeholder => "Confirmar senha*", :id => "user_password_confirmation_r" %>
             </div>
 
             <div class="form-rules">
@@ -46,8 +50,8 @@
             </div>
 
             <div class="form-submit">
-              <%= f.input :is_candidate, :as => :hidden, :input_html => { :value => "1" }%>
-              <%= f.button :submit, "Cadastrar", :class => "btn btn-blue" %>
+              <%= f.hidden_field :is_candidate, :value => "1" %>
+              <%= f.submit "Cadastrar", :class => "btn btn-blue" %>
             </div>
           <% end %>
         </div>
