[skip ci] auth facebook

--- a/app/views/layouts/_login.html.erb
+++ b/app/views/layouts/_login.html.erb
@@ -18,9 +18,9 @@
       </div>
     <% end %>
 
-    <a class="btn btn-facebook" href="#">
+    <%= link_to user_omniauth_authorize_path(:facebook), :class => "btn btn-facebook" do %>
       <span class="fa fa-facebook"></span> Login com Facebook
-    </a>
+    <% end %>
 
     <a class="btn btn-link" href="#">Ainda não sou cadastrado(a)</a>
   </div>
