--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,61 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<main id="main">
+  <div class="grid padding-top">
+    <section>
+      <div class="page-title-container">
+        <h1 class="page-title">
+          <span class="nc-min-icon nc-min-candidates"></span>
+          <span>Editar dados de acesso</span>
+        </h1>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+      <div class="col-5 col-center text-center">
+        <div class="margin-large-bottom">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), :class => 'form-curriculo', html: { method: :put }) do |f| %>
+            <div class="form-input">
+              <%= f.label :name %>
+              <%= f.text_field :name, autofocus: true, :required => true %>
+            </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+            <div class="form-input">
+              <%= f.label :email %>
+              <%= f.email_field :email, autofocus: true, :required => true %>
+            </div>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+            <div class="form-input">
+              <%= f.label :current_password %>
+              <%= f.password_field :current_password, autocomplete: "off" %>
+            </div>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+            <div class="form-input">
+              <%= f.label :password %>
+              <%= f.password_field :password, autocomplete: "off" %>
+            </div>
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+            <div class="form-input">
+              <%= f.label :password_confirmation %>
+              <%= f.password_field :password_confirmation, autocomplete: "off" %>
+            </div>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+            <div class="form-submit">
+              <%= f.submit "Salvar alterações", :class => "btn btn-blue" %>
+            </div>
+          <% end %>
+        </div>
+        <div class="margin-bottom">
+          <div class="page-title-container">
+            <h1 class="page-title">
+              <span class="nc-min-icon nc-min-candidates"></span>
+              <span>Deseja cancelar sua conta?</span>
+            </h1>
+          </div>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+          <div class="page-title-container">
+            <%= button_to "Excluir minha conta", registration_path(resource_name),
+            data: { confirm: "Ops... Tem certeza que deseja excluir sua conta? Todos os seus dados serão perdidos. Essa é uma açào irreversível?" },
+            method: :delete, :class => "btn btn-red" %>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+</main>
